[gd_scene load_steps=22 format=3 uid="uid://c3g3u8e8rn51w"]

[ext_resource type="Script" path="res://Sprites/Ui/Ui/UI.gd" id="1_yrinb"]
[ext_resource type="Texture2D" uid="uid://c82l4xk5yls6o" path="res://Sprites/Objekts/Ores/CommonOrs/CommonOreIcon.png" id="2_0q5d0"]
[ext_resource type="Texture2D" uid="uid://dhb7qei48ppg2" path="res://Sprites/Objekts/Ores/UncommonOrs/UncommonOreIcon.png" id="3_bjpna"]
[ext_resource type="Texture2D" uid="uid://dkflrxq8v6ify" path="res://Sprites/Objekts/Ores/LegendaryOrs/LegendaryOreIcon.png" id="4_0ikb5"]
[ext_resource type="Texture2D" uid="uid://bsbdgd2ye5p53" path="res://Sprites/Objekts/Ores/RareOrs/RareOreIcon.png" id="4_aeryo"]
[ext_resource type="Texture2D" uid="uid://d0larhe6ol587" path="res://Sprites/Objekts/Ores/EpicOrs/EpicOreIcon.png" id="5_178pu"]
[ext_resource type="Texture2D" uid="uid://b2ao3bw451r4n" path="res://Sprites/Ui/StrenghtButton.png" id="7_sfpix"]
[ext_resource type="Texture2D" uid="uid://c3b10rxdleswn" path="res://Sprites/Ui/ValueButton.png" id="8_7fmdw"]
[ext_resource type="Texture2D" uid="uid://bhj8aqcllf14b" path="res://Sprites/Ui/HealthRegenIcon.png" id="8_tnkj3"]
[ext_resource type="Texture2D" uid="uid://ehebr25e4gbn" path="res://Sprites/Ui/SpeedButton.png" id="9_63nlo"]
[ext_resource type="Texture2D" uid="uid://d3kb74c6tgthu" path="res://Sprites/Ui/RessistIcon.png" id="10_frr6w"]
[ext_resource type="Texture2D" uid="uid://drykdunyr5gaw" path="res://Sprites/Ui/CostWindow.png" id="10_jpwqj"]
[ext_resource type="Texture2D" uid="uid://bi8of06821xhc" path="res://Sprites/Ui/Spacer.png" id="11_30h3s"]
[ext_resource type="Texture2D" uid="uid://db2um30yogu8p" path="res://Sprites/Ui/CostWindowError.png" id="12_glyv3"]
[ext_resource type="Texture2D" uid="uid://vn2m4jtcwg68" path="res://Sprites/Ui/Ui/PreCaveWindow.png" id="15_0gh15"]
[ext_resource type="Texture2D" uid="uid://b8cwxfe6tgaih" path="res://Sprites/Menues/CaveMenue/C1.PNG" id="16_1dnw3"]
[ext_resource type="Texture2D" uid="uid://bh8epug00ykg3" path="res://Sprites/Ui/Ui/ExitButton.png" id="17_kckc3"]
[ext_resource type="Texture2D" uid="uid://r740pvgmj8wi" path="res://Sprites/Ui/Ui/MenueButtons.png" id="18_tu57n"]

[sub_resource type="Animation" id="Animation_cq1yj"]
resource_name = "InsufficientFunds"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buttons/CostBox:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("12_glyv3"), ExtResource("10_jpwqj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buttons/CostBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(95, 24), Vector2(99, 28), Vector2(95, 24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Buttons/CostBox:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1.8, 1.8), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_kfwvo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Buttons/CostBox:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_jpwqj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Buttons/CostBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(95, 24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Buttons/CostBox:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ekr6"]
_data = {
"InsufficientFunds": SubResource("Animation_cq1yj"),
"RESET": SubResource("Animation_kfwvo")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_yrinb")

[node name="CommonS" type="Sprite2D" parent="."]
position = Vector2(48, 48)
scale = Vector2(2, 2)
texture = ExtResource("2_0q5d0")

[node name="CommonL" type="Label" parent="CommonS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="UncommonS" type="Sprite2D" parent="."]
position = Vector2(48, 88)
scale = Vector2(2, 2)
texture = ExtResource("3_bjpna")

[node name="UncommonL" type="Label" parent="UncommonS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="RareS" type="Sprite2D" parent="."]
position = Vector2(48, 128)
scale = Vector2(2, 2)
texture = ExtResource("4_aeryo")

[node name="RareL" type="Label" parent="RareS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="EpicS" type="Sprite2D" parent="."]
position = Vector2(48, 168)
scale = Vector2(2, 2)
texture = ExtResource("5_178pu")

[node name="EpicL" type="Label" parent="EpicS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="LegendaryS" type="Sprite2D" parent="."]
position = Vector2(48, 208)
scale = Vector2(2, 2)
texture = ExtResource("4_0ikb5")

[node name="LegendaryL" type="Label" parent="LegendaryS"]
offset_left = 16.0
offset_top = -4.0
offset_right = 26.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 320.0
offset_right = 192.0
offset_bottom = 648.0
metadata/_edit_lock_ = true

[node name="Speed" type="TextureButton" parent="Buttons"]
layout_mode = 2
offset_left = 32.0
offset_top = 104.0
offset_right = 48.0
offset_bottom = 120.0
scale = Vector2(2, 2)
texture_normal = ExtResource("9_63nlo")

[node name="SpeedL" type="Label" parent="Buttons/Speed"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 27.0
scale = Vector2(0.5, 0.5)
text = "Lvl"

[node name="HealthRegen" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 32.0
offset_top = 144.0
offset_right = 48.0
offset_bottom = 160.0
scale = Vector2(2, 2)
texture_normal = ExtResource("8_tnkj3")

[node name="HealthRegenL" type="Label" parent="Buttons/HealthRegen"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 56.0
offset_bottom = 27.0
scale = Vector2(0.5, 0.5)
text = "Lvl"

[node name="Strength" type="TextureButton" parent="Buttons"]
layout_mode = 2
offset_left = 32.0
offset_top = 184.0
offset_right = 48.0
offset_bottom = 200.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("7_sfpix")

[node name="StrengthL" type="Label" parent="Buttons/Strength"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 27.0
scale = Vector2(0.5, 0.5)
text = "Lvl"

[node name="Resist" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 32.0
offset_top = 224.0
offset_right = 48.0
offset_bottom = 240.0
scale = Vector2(2, 2)
texture_normal = ExtResource("10_frr6w")

[node name="ResistL" type="Label" parent="Buttons/Resist"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 27.0
scale = Vector2(0.5, 0.5)
text = "Lvl"

[node name="Value" type="TextureButton" parent="Buttons"]
layout_mode = 2
offset_left = 32.0
offset_top = 264.0
offset_right = 48.0
offset_bottom = 280.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
texture_normal = ExtResource("8_7fmdw")

[node name="ValueL" type="Label" parent="Buttons/Value"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 27.0
scale = Vector2(0.5, 0.5)
text = "Lvl"

[node name="CostBox" type="Sprite2D" parent="Buttons"]
visible = false
position = Vector2(95, 24)
scale = Vector2(2, 2)
texture = ExtResource("10_jpwqj")

[node name="Label" type="Label" parent="Buttons/CostBox"]
offset_left = -10.0
offset_top = -14.5
offset_right = 30.0
offset_bottom = 8.5
scale = Vector2(0.5, 0.5)
text = "Cost"
metadata/_edit_use_anchors_ = true

[node name="Ore" type="Sprite2D" parent="Buttons/CostBox"]
position = Vector2(-20, 4)
texture = ExtResource("11_30h3s")

[node name="Cost" type="Label" parent="Buttons/CostBox"]
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0ekr6")
}

[node name="PlayerHP2" type="TextureProgressBar" parent="."]
offset_left = 384.0
offset_top = -4.0
offset_right = 768.0
offset_bottom = 92.0
value = 100.0

[node name="PlayerHpL" type="Label" parent="PlayerHP2"]
layout_mode = 0
offset_left = 178.0
offset_top = 36.0
offset_right = 206.0
offset_bottom = 59.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "100"

[node name="PreCaveWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 320.0
offset_top = 128.0
offset_right = 832.0
offset_bottom = 512.0

[node name="Window" type="Sprite2D" parent="PreCaveWindow"]
position = Vector2(256, 192)
texture = ExtResource("15_0gh15")

[node name="CavePreView" type="Sprite2D" parent="PreCaveWindow"]
position = Vector2(352, 116)
scale = Vector2(0.1, 0.101662)
texture = ExtResource("16_1dnw3")

[node name="CaveInfoText" type="Label" parent="PreCaveWindow"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1344.0
offset_bottom = 1984.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "This is a dirt cave "

[node name="ExitButton" type="TextureButton" parent="PreCaveWindow"]
layout_mode = 0
offset_left = 484.0
offset_top = 12.0
offset_right = 500.0
offset_bottom = 28.0
texture_normal = ExtResource("17_kckc3")

[node name="Exit" type="TextureButton" parent="PreCaveWindow"]
layout_mode = 0
offset_left = 61.0
offset_top = 285.0
offset_right = 243.0
offset_bottom = 325.0
texture_normal = ExtResource("18_tu57n")

[node name="Label2" type="Label" parent="PreCaveWindow/Exit"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 883.0
offset_bottom = 163.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "             Exit"

[node name="Enter" type="TextureButton" parent="PreCaveWindow"]
layout_mode = 0
offset_left = 269.0
offset_top = 285.0
offset_right = 451.0
offset_bottom = 325.0
texture_normal = ExtResource("18_tu57n")

[node name="Label3" type="Label" parent="PreCaveWindow/Enter"]
layout_mode = 0
offset_left = 3.00003
offset_top = 3.00002
offset_right = 883.0
offset_bottom = 163.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "            Enter"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="mouse_entered" from="Buttons" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Buttons" to="." method="_on_control_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/Speed" to="." method="_on_speed_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Speed" to="." method="_on_speed_mouse_exited"]
[connection signal="pressed" from="Buttons/Speed" to="." method="_on_speed_pressed"]
[connection signal="mouse_entered" from="Buttons/HealthRegen" to="." method="_on_health_regen_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/HealthRegen" to="." method="_on_health_regen_mouse_exited"]
[connection signal="pressed" from="Buttons/HealthRegen" to="." method="_on_health_regen_pressed"]
[connection signal="mouse_entered" from="Buttons/Strength" to="." method="_on_strength_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Strength" to="." method="_on_strength_mouse_exited"]
[connection signal="pressed" from="Buttons/Strength" to="." method="_on_strength_pressed"]
[connection signal="mouse_entered" from="Buttons/Resist" to="." method="_on_resist_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Resist" to="." method="_on_resist_mouse_exited"]
[connection signal="pressed" from="Buttons/Resist" to="." method="_on_resist_pressed"]
[connection signal="mouse_entered" from="Buttons/Value" to="." method="_on_value_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Value" to="." method="_on_value_mouse_exited"]
[connection signal="pressed" from="Buttons/Value" to="." method="_on_value_pressed"]
[connection signal="pressed" from="PreCaveWindow/ExitButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="PreCaveWindow/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="PreCaveWindow/Enter" to="." method="_on_enter_pressed"]
